RESOLVED FIXED65942
Fix one MIPS instruction to call JITStubThunked_##op
https://bugs.webkit.org/show_bug.cgi?id=65942
Summary Fix one MIPS instruction to call JITStubThunked_##op
Chao-ying Fu
Reported 2011-08-09 14:10:19 PDT
Hi All, I will upload a patch to fix one MIPS instruction from "bal" to "jalr" that calls JITStubThunked_##op. This fix is necessary, when JITStubThunked_##op is compiled for MIPS16, as "bal" cannot switch the current processor mode from MIPS32 to MIPS16. The GNU linker still can do optimization to convert "jalr" to "bal", if it is possible. Thanks a lot! Regards, Chao-ying
Attachments
Change MIPS bal to jalr (1.36 KB, patch)
2011-08-09 14:25 PDT, Chao-ying Fu
no flags
Chao-ying Fu
Comment 1 2011-08-09 14:25:45 PDT
Created attachment 103396 [details] Change MIPS bal to jalr Here is the patch. Thanks!
WebKit Review Bot
Comment 2 2011-08-09 17:29:03 PDT
Comment on attachment 103396 [details] Change MIPS bal to jalr Clearing flags on attachment: 103396 Committed r92731: <http://trac.webkit.org/changeset/92731>
WebKit Review Bot
Comment 3 2011-08-09 17:29:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.