Fix one MIPS instruction to call JITStubThunked_##op https://bugs.webkit.org/show_bug.cgi?id=65942

Patch by Chao-ying Fu <fu@mips.com> on 2011-08-09
Reviewed by Gavin Barraclough.

Changed "bal" to "jalr" for a possible processor mode change from
MIPS32 to MIPS16.

* jit/JITStubs.cpp:

Canonical link: https://commits.webkit.org/81810@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92731 268f45cc-cd09-0410-ab3c-d52691b4dbfc